# rust-sixel

./: Cargo.toml
examples/: draw.rs  play.rs
src/: encoder.rs  environment.rs  lib.rs  settings.rs
